Bug 175858 - Web-page animated GIFs stop depending on the position of the scrollbar
Summary: Web-page animated GIFs stop depending on the position of the scrollbar
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-23 02:49 UTC by Brendon Higgins
Modified: 2009-03-24 21:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brendon Higgins 2008-11-23 02:49:08 UTC
Version:            (using KDE 4.1.3)
OS:                Linux
Installed from:    Debian testing/unstable Packages

I've tried to illustrate this problem with some testcases at http://tachyon.no-ip.org/giftest/index[1-3].html

I find that viewing pages 1 & 2 in Konqueror, if I scroll down so that the image is partially obscured by the tabbar, the animation stops. It doesn't seem to occur when the same animated image is displayed multiple times on the same page (page 3). Obviously, the image ought to continue animating unless it becomes completely invisible due to the scroll position. 

I'm only guessing if this is a KHTML bug - please reassign if it's not.
Comment 1 Dario Andres 2009-01-23 12:22:44 UTC
Here using:

Qt: 4.4.3 + qt-copy-patches-910240
KDE: 4.2.60 (KDE 4.2.60 (KDE 4.3 >= 20090116))
kdelibs svn rev. 915509 / kdebase svn rev. 915509
on ArchLinux x86_64 - Kernel 2.6.28.1

I can confirm this bug.
Also when the image is partly below of the tabbar... scrolling little pixels will show the next frames of the animated image
I suppose this is a performance-saving feature.. but it shouldn't stop the animations until they are 100% hidden
Comment 2 Maksim Orlovich 2009-03-24 21:04:15 UTC
SVN commit 943998 by orlovich:

Give the proper dirty rectangle when switching frames in animated images.
The previous code mostly worked with Qt4.4 by some happy happenstance, but failed cleanly with Qt4.5 --- yey to that.

BUG:175858
BUG:186159


 M  +1 -1      animprovider.cpp  
 M  +6 -0      image.cpp  
 M  +5 -0      image.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=943998
Comment 3 Maksim Orlovich 2009-03-24 21:06:05 UTC
SVN commit 943999 by orlovich:

Merged revision:r943998 | orlovich | 2009-03-24 16:04:11 -0400 (Tue, 24 Mar 2009) | 6 lines

Give the proper dirty rectangle when switching frames in animated images.
The previous code mostly worked with Qt4.4 by some happy happenstance, but failed cleanly with Qt4.5 --- yey to that.

BUG:175858
BUG:186159

 M  +1 -1      animprovider.cpp  
 M  +6 -0      image.cpp  
 M  +5 -0      image.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=943999