Give the proper dirty rectangle when switching frames in animated images. The previous code mostly worked with Qt4.4 by some happy happenstance, but failed cleanly with Qt4.5 --- yey to that.

BUG:175858
BUG:186159

svn path=/branches/KDE/4.2/kdelibs/; revision=943998